# umka-lang

./: .clangd  .gitignore  .sample.c.kak.MIbf3g  .travis.yml  CMakeLists.txt  CNAME  GNUmakefile  GithubActionsMain.mak  GithubActionsWindows.mak  LICENSE  Makefile  README.md  Umka.sublime-syntax  box.json  build_darwin.sh  build_linux.sh  build_linux_mingw.sh  build_playground.bat  build_playground_linux.sh  build_windows_mingw.bat  build_windows_msvc.bat  conv.um  dyn.um  fibers.um  fractal.um  i2i.um  index.html  lentest.um  libumka.wasm  libumka.wrap  mem.um  meson.build  methods.um  nbody.py  nbody.um  prnt.um  raytracer.um  run_emscripten.bat  run_emscripten_linux.sh  set_emscripten_paths.bat  (+17 more)
.github/workflows/: codeql-buildscript.sh  embed.yml  main-ffi.yml  main.yml  umbox.yml
.github/workflows/umbox/umka_api/: README.md  box.json
benchmarks/: allbench.um  maps.um  matrices.ml  matrices.py  matrices.um  matrices.wren  nbody.py  nbody.um  trees.lua  trees.py  trees.um  trees_nostruct.lua  trees_nostruct.py
cbplibumka/: libumka.cbp  libumka.depend  libumka.layout
cbpumka/: umka.cbp  umka.depend  umka.layout
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
doc/: api.md  lang.md  lib.md  spec.html
editors/: Umka.sublime-syntax
examples/: 3dcam.c  3dcam.um  fractal.um  raytracer.um
examples/3dcam/: 3dcam.c  3dcam.md  3dcam.um  build_3dcam_darwin.sh  build_3dcam_linux.sh  build_3dcam_windows_mingw.bat
examples/embed/: README.md  main.c  meson.build
examples/embed/subprojects/: .gitignore
examples/fractal/: fractal.um
examples/lisp/: ev.um  lex.um  lisp.um  parse.um  test.lisp
examples/raytracer/: raytracer.um
exec/: CMakeLists.txt
import/: .std.um.swp  fnc.um  map.um  mat.um  std.um  utf8.um
import/embed/: std.um  umka_runtime_src.h
import_embed/: std.um  um2h.um  umka_runtime_src.h
include/: umka_api.h
lib/: CMakeLists.txt
libumka/: libumka.depend  libumka.layout
playground/: umka.js
project_libumka/: libumka.cbp  libumka.layout
project_umka/: umka.cbp  umka.layout
projects/: libumka.cbp  umka.cbp  umka.workspace
projlibumka/: libumka.cbp
runtime/: embed_runtime_linux.sh  embed_runtime_windows_mingw.bat  embed_runtime_windows_msvc.bat  fnc.um  mat.um  std.um  um2h.um  umka_runtime_src.h  utf8.um
src/: .umka.c.swp  CMakeLists.txt  umka.c  umka.exp  umka.lib  umka_api.c  umka_api.h  umka_common.c  umka_common.h  umka_compiler.c  umka_compiler.h  umka_const.c  umka_const.h  umka_decl.c  umka_decl.h  umka_expr.c  umka_expr.h  umka_ffi.c  umka_ffi.h  umka_fuzz.c  umka_gen.c  umka_gen.h  umka_ident.c  umka_ident.h  umka_lexer.c  umka_lexer.h  umka_main.c  umka_runtime.c  umka_runtime.h  umka_runtime_src.h  umka_stmt.c  umka_stmt.h  umka_types.c  umka_types.h  umka_vm.c  umka_vm.h  umkalang_export.h
tests/: .readall.um.swp  all.um  binfileio.um  byteconv.um  closures.um  closures2.um  closures3.um  compare.um  constfold.um  datetime.um  defparam.um  dynarrays.um  dynarrays2.um  dynarrays3.um  enums.um  errors.um  extlib.um  fibers.um  fibers2.um  fnctools.um  forinptr.um  fuzz.um  fwdtypes.um  gc.um  gc2.um  gcbug.um  imports.um  imports2.um  imports3.um  imports4.um  interfaces.um  interfaces2.um  interfaces3.um  interfaces4.um  itemptr.um  maps.um  maps2.um  modulespaces.um  multret.um  multret2.um  (+23 more)
tests/lib/: build_lib_darwin.sh  build_lib_linux.sh  build_lib_windows_mingw.bat  lib.c  lib.um
tests/lib1/: utils.um
tests/lib2/: lib2.um  utils.um
tests/path with spaces/: a.um
umka/: umka.depend  umka.layout
